--- a/app/src/main/res/layout/activity_favorite_list.xml
+++ b/app/src/main/res/layout/activity_favorite_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,59 +8,31 @@
     android:orientation="vertical"
     android:padding="10dp">
 
+
     <Button
+        android:id="@+id/button2"
         android:layout_width="235dp"
         android:layout_height="38dp"
         android:layout_gravity="center"
+        android:layout_margin="10dp"
         android:background="@drawable/catagory_section_bar"
         android:text="@string/Favorite_List"
         android:textColor="@color/black"
-        android:layout_margin="10dp"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp"
-        android:weightSum="3">
-
-        <Button
-            android:layout_width="120dp"
-            android:layout_height="30dp"
-            android:text="@string/most_search"
-            android:background="@drawable/continue_with_button"
-            android:backgroundTint="@color/Google"
-            android:layout_weight="1"
-            android:layout_marginTop="5dp"
-            />
-        <Button
-            android:layout_width="85dp"
-            android:layout_height="30dp"
-            android:text="@string/Trending"
-            android:background="@drawable/continue_with_button"
-            android:backgroundTint="@color/Google"
-            android:layout_weight="1"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="10dp"
-            />
-        <Button
-            android:layout_width="75dp"
-            android:layout_height="30dp"
-            android:text="@string/Explore"
-            android:background="@drawable/continue_with_button"
-            android:backgroundTint="@color/Google"
-            android:layout_weight="1"
-            android:layout_marginStart="10dp"
-            android:layout_marginBottom="10dp"
-            />
-
-    </LinearLayout>
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="560dp"
-        >
+        android:layout_height="600dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button2">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -69,133 +41,142 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:weightSum="2"
+                android:layout_gravity="center"
                 android:orientation="horizontal"
                 android:padding="10dp"
-                android:layout_gravity="center">
+                android:weightSum="2">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/favorite_01"/>
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/favorite_02"
-                    android:layout_marginStart="62dp"/>
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:weightSum="2"
-                android:orientation="horizontal"
-                android:padding="10dp"
-                android:layout_gravity="center">
+                    android:background="@drawable/favorite_01" />
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/favorite_03"/>
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/favorite_04"
-                    android:layout_marginStart="62dp"/>
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:weightSum="2"
-                android:orientation="horizontal"
-                android:padding="10dp"
-                android:layout_gravity="center">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/favorite_05"
-                    />
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/favorite_06"
                     android:layout_marginStart="62dp"
-                    />
+                    android:background="@drawable/favorite_02" />
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:weightSum="2"
+                android:layout_gravity="center"
                 android:orientation="horizontal"
                 android:padding="10dp"
-                android:layout_gravity="center">
+                android:weightSum="2">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/thriller_01"
-                    />
+                    android:background="@drawable/favorite_03" />
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/thriller_02"
-                    android:layout_marginStart="62dp"/>
+                    android:layout_marginStart="62dp"
+                    android:background="@drawable/favorite_04" />
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:weightSum="2"
+                android:layout_gravity="center"
                 android:orientation="horizontal"
                 android:padding="10dp"
-                android:layout_gravity="center">
+                android:weightSum="2">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/sf_01"
-                    />
+                    android:background="@drawable/favorite_05" />
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/sf_02"
-                    android:layout_marginStart="62dp"/>
+                    android:layout_marginStart="62dp"
+                    android:background="@drawable/favorite_06" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal"
+                android:padding="10dp"
+                android:weightSum="2">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/thriller_01" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="62dp"
+                    android:background="@drawable/thriller_02" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal"
+                android:padding="10dp"
+                android:weightSum="2">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/sf_01" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="62dp"
+                    android:background="@drawable/sf_02" />
 
             </LinearLayout>
 
         </LinearLayout>
 
     </ScrollView>
+
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        >
+        android:layout_marginBottom="4dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@drawable/icon_home"
-            />
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="33dp"
-            android:layout_gravity="center"
-            android:background="@drawable/icon_favorite"
-            />
+            android:background="@drawable/icon_home" />
+
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="33dp"
-            android:background="@drawable/ic_swap"
-            />
+            android:background="@drawable/icon_favorite" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="33dp"
+            android:background="@drawable/ic_swap" />
 
         <ImageButton
             android:id="@+id/Profile"
@@ -204,8 +185,7 @@
             android:layout_gravity="center"
             android:layout_marginStart="33dp"
 
-            android:background="@drawable/icon_user"
-            />
+            android:background="@drawable/icon_user" />
 
         <ImageButton
             android:layout_width="wrap_content"
@@ -213,9 +193,8 @@
             android:layout_gravity="center"
             android:layout_marginStart="33dp"
 
-            android:background="@drawable/icon_menu"
-            />
+            android:background="@drawable/icon_menu" />
 
     </LinearLayout>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
