--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -1,155 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
-    android:orientation="vertical"
-    android:background="@color/white"
-    tools:context=".home_page">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-        <ImageView
-            android:id="@+id/imageButton"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:scaleType="fitCenter"
-            android:backgroundTint="@color/white"
-            android:src="@mipmap/ic_porua_round" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:gravity="end"
-            >
-            <ImageView
-                android:id="@+id/search_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_search"
-                />
-            <ImageView
-                android:id="@+id/Cart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:background="@drawable/ic_cart"
-                />
+    tools:context=".home">
 
 
-        </LinearLayout>
+    <ImageView
+        android:id="@+id/imageButton"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/white"
+        android:scaleType="fitCenter"
+        android:src="@mipmap/ic_porua_round"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:padding="5dp"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:background="@drawable/round_button"
-            android:gravity="center"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:background="@drawable/round_button"
-            android:layout_marginStart="25dp"
-            android:gravity="center"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="25dp"
-            android:gravity="center"
-            android:background="@drawable/round_button"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="25dp"
-            android:gravity="center"
-            android:background="@drawable/round_button"
-            android:text="Button" />
-    </LinearLayout>
-    <ImageButton
+    <ImageView
+        android:id="@+id/search_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/hot_deals_button"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="12dp"
+        android:background="@drawable/ic_search"
+        app:layout_constraintEnd_toStartOf="@+id/Cart"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/Cart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/ic_cart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="52dp"
+        android:background="@drawable/hot_deals_button"
         android:src="@drawable/hot_deal"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton" />
+
     <LinearLayout
-        android:weightSum="2"
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
         android:orientation="horizontal"
-        android:layout_marginTop="20dp"
-        >
+        android:weightSum="2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton2">
 
         <Button
-            android:layout_margin="10dp"
             android:id="@+id/science_fiction_button"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:gravity="center"
+            android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@drawable/cat_button_design"
+            android:gravity="center"
             android:text="@string/science_fiction" />
 
         <Button
-            android:layout_margin="10dp"
             android:id="@+id/novel_button"
             android:layout_width="match_parent"
             android:layout_height="100dp"
+            android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@drawable/cat_button_design"
             android:gravity="center"
             android:text="@string/novel" />
     </LinearLayout>
+
     <LinearLayout
-        android:layout_marginBottom="60dp"
-        android:weightSum="2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal"
-        >
+        android:weightSum="2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
 
         <Button
-            android:layout_margin="10dp"
             android:id="@+id/poetry_button"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:gravity="center"
-            android:background="@drawable/cat_button_design"
+            android:layout_margin="10dp"
             android:layout_weight="1"
+            android:background="@drawable/cat_button_design"
+            android:gravity="center"
             android:text="@string/poetry" />
 
         <Button
-            android:layout_margin="10dp"
             android:id="@+id/thriller_button"
             android:layout_width="match_parent"
             android:layout_height="100dp"
+            android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@drawable/cat_button_design"
             android:gravity="center"
@@ -159,32 +122,34 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_gravity="center"
-        android:layout_marginTop="18dp"
-        >
+        android:layout_marginBottom="4dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@drawable/icon_home"
-            />
+            android:background="@drawable/icon_home" />
+
         <ImageButton
             android:id="@+id/favorite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="33dp"
             android:layout_gravity="center"
-            android:background="@drawable/icon_favorite"
-            />
+            android:layout_marginStart="33dp"
+            android:background="@drawable/icon_favorite" />
+
         <ImageButton
             android:id="@+id/Swap"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="33dp"
-            android:background="@drawable/ic_swap"
-            />
+            android:background="@drawable/ic_swap" />
 
         <ImageButton
             android:id="@+id/Profile"
@@ -192,8 +157,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="33dp"
-            android:background="@drawable/icon_user"
-            />
+            android:background="@drawable/icon_user" />
 
         <ImageButton
             android:id="@+id/menu"
@@ -201,10 +165,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="33dp"
-            android:background="@drawable/icon_menu"
-            />
+            android:background="@drawable/icon_menu" />
 
     </LinearLayout>
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
