--- a/app/src/main/res/layout/activity_novel.xml
+++ b/app/src/main/res/layout/activity_novel.xml
@@ -1,66 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Science_Fiction"
-    android:orientation="vertical"
-    android:padding="10dp">
+    tools:context=".Novel">
+
 
     <Button
+        android:id="@+id/button3"
         android:layout_width="235dp"
         android:layout_height="38dp"
         android:layout_gravity="center"
+        android:layout_margin="10dp"
+        android:layout_marginTop="56dp"
         android:background="@drawable/catagory_section_bar"
         android:text="@string/novel"
         android:textColor="@color/black"
-        android:layout_margin="10dp"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp"
-        android:weightSum="3">
-
-        <Button
-            android:layout_width="120dp"
-            android:layout_height="30dp"
-            android:text="@string/most_search"
-            android:background="@drawable/continue_with_button"
-            android:backgroundTint="@color/Google"
-            android:layout_weight="1"
-            android:layout_marginTop="5dp"
-            />
-        <Button
-            android:layout_width="85dp"
-            android:layout_height="30dp"
-            android:text="@string/Trending"
-            android:background="@drawable/continue_with_button"
-            android:backgroundTint="@color/Google"
-            android:layout_weight="1"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="10dp"
-            />
-        <Button
-            android:layout_width="75dp"
-            android:layout_height="30dp"
-            android:text="@string/Explore"
-            android:background="@drawable/continue_with_button"
-            android:backgroundTint="@color/Google"
-            android:layout_weight="1"
-            android:layout_marginStart="10dp"
-            android:layout_marginBottom="10dp"
-            />
-
-    </LinearLayout>
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="560dp"
-        >
+        android:layout_width="410dp"
+        android:layout_height="641dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button3"
+        app:layout_constraintVertical_bias="0.354"
+        tools:ignore="MissingConstraints">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -69,110 +39,120 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:weightSum="2"
+                android:layout_gravity="center"
                 android:orientation="horizontal"
                 android:padding="10dp"
-                android:layout_gravity="center">
+                android:weightSum="2">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/novel_01"/>
+                    android:background="@drawable/novel_01" />
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/novel_02"
-                    android:layout_marginStart="62dp"/>
+                    android:layout_marginStart="62dp"
+                    android:background="@drawable/novel_02" />
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:weightSum="2"
+                android:layout_gravity="center"
                 android:orientation="horizontal"
                 android:padding="10dp"
-                android:layout_gravity="center">
+                android:weightSum="2">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/novel_03"/>
+                    android:background="@drawable/novel_03" />
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/novel_04"
-                    android:layout_marginStart="62dp"/>
+                    android:layout_marginStart="62dp"
+                    android:background="@drawable/novel_04" />
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:weightSum="2"
+                android:layout_gravity="center"
                 android:orientation="horizontal"
                 android:padding="10dp"
-                android:layout_gravity="center">
+                android:weightSum="2">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/novel_05"/>
+                    android:background="@drawable/novel_05" />
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/novel_06"
-                    android:layout_marginStart="62dp"/>
+                    android:layout_marginStart="62dp"
+                    android:background="@drawable/novel_06" />
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:weightSum="2"
+                android:layout_gravity="center"
                 android:orientation="horizontal"
                 android:padding="10dp"
-                android:layout_gravity="center">
+                android:weightSum="2">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/novel_04"/>
+                    android:background="@drawable/novel_04" />
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/novel_05"
-                    android:layout_marginStart="62dp"/>
+                    android:layout_marginStart="62dp"
+                    android:background="@drawable/novel_05" />
 
             </LinearLayout>
 
         </LinearLayout>
 
     </ScrollView>
+
     <LinearLayout
+        android:id="@+id/linearLayout5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        >
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@drawable/icon_home"
-            />
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="33dp"
-            android:layout_gravity="center"
-            android:background="@drawable/icon_favorite"
-            />
+            android:background="@drawable/icon_home" />
+
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="33dp"
-            android:background="@drawable/ic_swap"
-            />
+            android:background="@drawable/icon_favorite" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="33dp"
+            android:background="@drawable/ic_swap" />
 
         <ImageButton
             android:id="@+id/Profile"
@@ -181,8 +161,7 @@
             android:layout_gravity="center"
             android:layout_marginStart="33dp"
 
-            android:background="@drawable/icon_user"
-            />
+            android:background="@drawable/icon_user" />
 
         <ImageButton
             android:layout_width="wrap_content"
@@ -190,9 +169,9 @@
             android:layout_gravity="center"
             android:layout_marginStart="33dp"
 
-            android:background="@drawable/icon_menu"
-            />
+            android:background="@drawable/icon_menu" />
 
     </LinearLayout>
 
-</LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
