--- a/app/src/main/res/layout/activity_science_fiction.xml
+++ b/app/src/main/res/layout/activity_science_fiction.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,59 +8,29 @@
     android:orientation="vertical"
     android:padding="10dp">
 
+
     <Button
+        android:id="@+id/button5"
         android:layout_width="235dp"
         android:layout_height="38dp"
         android:layout_gravity="center"
+        android:layout_margin="10dp"
         android:background="@drawable/catagory_section_bar"
         android:text="@string/science_fiction"
         android:textColor="@color/black"
-        android:layout_margin="10dp"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp"
-        android:weightSum="3">
-
-        <Button
-            android:layout_width="120dp"
-            android:layout_height="30dp"
-            android:text="@string/most_search"
-            android:background="@drawable/continue_with_button"
-            android:backgroundTint="@color/Google"
-            android:layout_weight="1"
-            android:layout_marginTop="5dp"
-            />
-        <Button
-            android:layout_width="85dp"
-            android:layout_height="30dp"
-            android:text="@string/Trending"
-            android:background="@drawable/continue_with_button"
-            android:backgroundTint="@color/Google"
-            android:layout_weight="1"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="10dp"
-            />
-        <Button
-            android:layout_width="75dp"
-            android:layout_height="30dp"
-            android:text="@string/Explore"
-            android:background="@drawable/continue_with_button"
-            android:backgroundTint="@color/Google"
-            android:layout_weight="1"
-            android:layout_marginStart="10dp"
-            android:layout_marginBottom="10dp"
-            />
-
-    </LinearLayout>
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="560dp"
-        >
+        android:id="@+id/scrollView3"
+        android:layout_width="398dp"
+        android:layout_height="600dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button5">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -69,111 +39,122 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:weightSum="2"
+                android:layout_gravity="center"
                 android:orientation="horizontal"
                 android:padding="10dp"
-                android:layout_gravity="center">
+                android:weightSum="2">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/sf_01"/>
+                    android:background="@drawable/sf_01" />
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/sf_02"
-                    android:layout_marginStart="62dp"/>
+                    android:layout_marginStart="62dp"
+                    android:background="@drawable/sf_02" />
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:weightSum="2"
+                android:layout_gravity="center"
                 android:orientation="horizontal"
                 android:padding="10dp"
-                android:layout_gravity="center">
+                android:weightSum="2">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/sf_03"/>
+                    android:background="@drawable/sf_03" />
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/sf_04"
-                    android:layout_marginStart="62dp"/>
+                    android:layout_marginStart="62dp"
+                    android:background="@drawable/sf_04" />
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:weightSum="2"
+                android:layout_gravity="center"
                 android:orientation="horizontal"
                 android:padding="10dp"
-                android:layout_gravity="center">
+                android:weightSum="2">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/sf_05"/>
+                    android:background="@drawable/sf_05" />
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/sf_06"
-                    android:layout_marginStart="62dp"/>
+                    android:layout_marginStart="62dp"
+                    android:background="@drawable/sf_06" />
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:weightSum="2"
+                android:layout_gravity="center"
                 android:orientation="horizontal"
                 android:padding="10dp"
-                android:layout_gravity="center">
+                android:weightSum="2">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/sf_05"/>
+                    android:background="@drawable/sf_05" />
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/sf_06"
-                    android:layout_marginStart="62dp"/>
+                    android:layout_marginStart="62dp"
+                    android:background="@drawable/sf_06" />
 
             </LinearLayout>
 
         </LinearLayout>
 
     </ScrollView>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        >
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView3"
+        app:layout_constraintVertical_bias="1.0">
+
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@drawable/icon_home"
-            />
+            android:background="@drawable/icon_home" />
+
         <ImageButton
             android:id="@+id/favorite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="33dp"
             android:layout_gravity="center"
-            android:background="@drawable/icon_favorite"
-            />
+            android:layout_marginStart="33dp"
+            android:background="@drawable/icon_favorite" />
+
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="33dp"
-            android:background="@drawable/ic_swap"
-            />
+            android:background="@drawable/ic_swap" />
 
         <ImageButton
             android:id="@+id/Profile"
@@ -182,8 +163,7 @@
             android:layout_gravity="center"
             android:layout_marginStart="33dp"
 
-            android:background="@drawable/icon_user"
-            />
+            android:background="@drawable/icon_user" />
 
         <ImageButton
             android:layout_width="wrap_content"
@@ -191,9 +171,8 @@
             android:layout_gravity="center"
             android:layout_marginStart="33dp"
 
-            android:background="@drawable/icon_menu"
-            />
+            android:background="@drawable/icon_menu" />
 
     </LinearLayout>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
